--- a/myweb/package.json
+++ b/myweb/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.5.2",
     "node-mysql": "^0.4.0"
   }
